--- a/ja/quick_start.html
+++ b/ja/quick_start.html
@@ -203,7 +203,7 @@ fn main() -&gt; LinderaResult&lt;()&gt; {
     Ok(())
 }</code></pre></pre>
 <p>上記の例は以下のように実行できます：</p>
-<pre><code class="language-shell">% cargo run --features=embedded-ipadic --example=tokenize
+<pre><code class="language-shell">% cargo run --features=embed-ipadic --example=tokenize
 </code></pre>
 <p>実行結果は以下のようになります：</p>
 <pre><code class="language-text">text:   関西国際空港限定トートバッグ
