--- a/quick_start.html
+++ b/quick_start.html
@@ -203,7 +203,7 @@ fn main() -&gt; LinderaResult&lt;()&gt; {
     Ok(())
 }</code></pre></pre>
 <p>The above example can be run as follows:</p>
-<pre><code class="language-shell">% cargo run --features=embedded-ipadic --example=tokenize
+<pre><code class="language-shell">% cargo run --features=embed-ipadic --example=tokenize
 </code></pre>
 <p>You can see the result as follows:</p>
 <pre><code class="language-text">text:   関西国際空港限定トートバッグ
