--- a/cli.html
+++ b/cli.html
@@ -186,19 +186,19 @@
 <h2 id="build"><a class="header" href="#build">Build</a></h2>
 <h3 id="build-with-ipadic-japanese-dictionary"><a class="header" href="#build-with-ipadic-japanese-dictionary">Build with IPADIC (Japanese dictionary)</a></h3>
 <p>The "ipadic" feature flag allows Lindera to include IPADIC.</p>
-<pre><code class="language-shell script">% cargo build --release --features=embedded-ipadic
+<pre><code class="language-shell script">% cargo build --release --features=embed-ipadic
 </code></pre>
 <h3 id="build-with-unidic-japanese-dictionary"><a class="header" href="#build-with-unidic-japanese-dictionary">Build with UniDic (Japanese dictionary)</a></h3>
 <p>The "unidic" feature flag allows Lindera to include UniDic.</p>
-<pre><code class="language-shell script">% cargo build --release --features=embedded-unidic
+<pre><code class="language-shell script">% cargo build --release --features=embed-unidic
 </code></pre>
 <h3 id="build-with-ko-dic-korean-dictionary"><a class="header" href="#build-with-ko-dic-korean-dictionary">Build with ko-dic (Korean dictionary)</a></h3>
 <p>The "ko-dic" feature flag allows Lindera to include ko-dic.</p>
-<pre><code class="language-shell script">% cargo build --release --features=embedded-ko-dic
+<pre><code class="language-shell script">% cargo build --release --features=embed-ko-dic
 </code></pre>
 <h3 id="build-with-cc-cedict-chinese-dictionary"><a class="header" href="#build-with-cc-cedict-chinese-dictionary">Build with CC-CEDICT (Chinese dictionary)</a></h3>
 <p>The "cc-cedict" feature flag allows Lindera to include CC-CEDICT.</p>
-<pre><code class="language-shell script">% cargo build --release --features=embedded-cc-cedict
+<pre><code class="language-shell script">% cargo build --release --features=embed-cc-cedict
 </code></pre>
 <h3 id="build-without-dictionaries"><a class="header" href="#build-without-dictionaries">Build without dictionaries</a></h3>
 <p>To reduce Lindera's binary size, omit the feature flag.
@@ -512,7 +512,7 @@ EOS
 。      記号,句点,*,*,*,*,。,。,。
 EOS
 </code></pre>
-<p>NOTE: To include IPADIC dictionary in the binary, you must build with the <code>--features=embedded-ipadic</code> option.</p>
+<p>NOTE: To include IPADIC dictionary in the binary, you must build with the <code>--features=embed-ipadic</code> option.</p>
 <h4 id="tokenize-with-embedded-unidic-japanese-dictionary"><a class="header" href="#tokenize-with-embedded-unidic-japanese-dictionary">Tokenize with embedded UniDic (Japanese dictionary)</a></h4>
 <pre><code class="language-shell">% echo "日本語の形態素解析を行うことができます。" | lindera tokenize \
   --dict embedded://unidic
@@ -532,7 +532,7 @@ EOS
 。      補助記号,句点,*,*,*,*,,。,。,,。,,記号,*,*,*,*
 EOS
 </code></pre>
-<p>NOTE: To include UniDic dictionary in the binary, you must build with the <code>--features=embedded-unidic</code> option.</p>
+<p>NOTE: To include UniDic dictionary in the binary, you must build with the <code>--features=embed-unidic</code> option.</p>
 <h4 id="tokenize-with-embedded-ipadic-neologd-japanese-dictionary"><a class="header" href="#tokenize-with-embedded-ipadic-neologd-japanese-dictionary">Tokenize with embedded IPADIC NEologd (Japanese dictionary)</a></h4>
 <pre><code class="language-shell">% echo "日本語の形態素解析を行うことができます。" | lindera tokenize \
   --dict embedded://ipadic-neologd
@@ -549,7 +549,7 @@ EOS
 。      記号,句点,*,*,*,*,。,。,。
 EOS
 </code></pre>
-<p>NOTE: To include UniDic dictionary in the binary, you must build with the <code>--features=embedded-ipadic-neologd</code> option.</p>
+<p>NOTE: To include UniDic dictionary in the binary, you must build with the <code>--features=embed-ipadic-neologd</code> option.</p>
 <h4 id="tokenize-with-embedded-ko-dic-korean-dictionary"><a class="header" href="#tokenize-with-embedded-ko-dic-korean-dictionary">Tokenize with embedded ko-dic (Korean dictionary)</a></h4>
 <pre><code class="language-shell">% echo "한국어의형태해석을실시할수있습니다." | lindera tokenize \
   --dict embedded://ko-dic
@@ -567,7 +567,7 @@ EOS
 .       UNK
 EOS
 </code></pre>
-<p>NOTE: To include ko-dic dictionary in the binary, you must build with the <code>--features=embedded-ko-dic</code> option.</p>
+<p>NOTE: To include ko-dic dictionary in the binary, you must build with the <code>--features=embed-ko-dic</code> option.</p>
 <h4 id="tokenize-with-embedded-cc-cedict-chinese-dictionary"><a class="header" href="#tokenize-with-embedded-cc-cedict-chinese-dictionary">Tokenize with embedded CC-CEDICT (Chinese dictionary)</a></h4>
 <pre><code class="language-shell">% echo "可以进行中文形态学分析。" | lindera tokenize \
   --dict embedded://cc-cedict
@@ -580,7 +580,7 @@ EOS
 。      UNK
 EOS
 </code></pre>
-<p>NOTE: To include CC-CEDICT dictionary in the binary, you must build with the <code>--features=embedded-cc-cedict</code> option.</p>
+<p>NOTE: To include CC-CEDICT dictionary in the binary, you must build with the <code>--features=embed-cc-cedict</code> option.</p>
 <h3 id="user-dictionary-examples"><a class="header" href="#user-dictionary-examples">User dictionary examples</a></h3>
 <p>Lindera supports user dictionaries to add custom words alongside system dictionaries. User dictionaries can be in CSV or binary format.</p>
 <h4 id="use-user-dictionary-csv-format"><a class="header" href="#use-user-dictionary-csv-format">Use user dictionary (CSV format)</a></h4>
