--- a/lindera-wasm/example/index.html
+++ b/lindera-wasm/example/index.html
@@ -160,28 +160,38 @@
             }
         }
 
-        /* ローディングアニメーション */
-        .loading {
-            opacity: 0.7;
-            pointer-events: none;
+        /* トークンテーブルのスタイル */
+        .token-table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 10px;
+            font-size: 14px;
         }
 
-        .loading #runButton::after {
-            content: "";
-            display: inline-block;
-            width: 16px;
-            height: 16px;
-            margin-left: 10px;
-            border: 2px solid transparent;
-            border-top: 2px solid white;
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
+        .token-table th,
+        .token-table td {
+            text-align: left;
+            padding: 12px;
+            border-bottom: 1px solid #e1e5e9;
         }
 
-        @keyframes spin {
-            to {
-                transform: rotate(360deg);
-            }
+        .token-table th {
+            color: #666;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+        }
+
+        .token-table tr:hover {
+            background-color: #f1f5f9;
+        }
+
+        .token-table td strong {
+            color: #764ba2;
+        }
+
+        .token-table small {
+            color: #64748b;
         }
     </style>
 </head>
