--- a/lindera-wasm/example/index.html
+++ b/lindera-wasm/example/index.html
@@ -160,6 +160,40 @@
             }
         }
 
+        /* トークンテーブルのスタイル */
+        .token-table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 10px;
+            font-size: 14px;
+        }
+
+        .token-table th,
+        .token-table td {
+            text-align: left;
+            padding: 12px;
+            border-bottom: 1px solid #e1e5e9;
+        }
+
+        .token-table th {
+            color: #666;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+        }
+
+        .token-table tr:hover {
+            background-color: #f1f5f9;
+        }
+
+        .token-table td strong {
+            color: #764ba2;
+        }
+
+        .token-table small {
+            color: #64748b;
+        }
+
         /* ローディングアニメーション */
         .loading {
             opacity: 0.7;
